[gd_scene load_steps=8 format=3 uid="uid://dm7xvmwbyolcb"]

[ext_resource type="PackedScene" uid="uid://ck44px42ecqy1" path="res://Scene/player.tscn" id="3_lttqn"]
[ext_resource type="PackedScene" uid="uid://bevywlj1ombbj" path="res://Scene/enemy_ship_spawner.tscn" id="4_4kvl3"]
[ext_resource type="PackedScene" uid="uid://ctom63geh8dft" path="res://Scene/asteroid_spawner.tscn" id="5_lttqn"]
[ext_resource type="PackedScene" path="res://Scene/camera_follow.tscn" id="6_camera"]
[ext_resource type="PackedScene" uid="uid://dv26fo5pgouk2" path="res://Scene/background.tscn" id="6_lee88"]
[ext_resource type="Script" uid="uid://c8qdusmb5fi77" path="res://Scripts/Camera/camera_manager.gd" id="7_camera_manager"]
[ext_resource type="Script" path="res://Scripts/UI/game_tutorial_ui.gd" id="8_tutorial"]

[node name="MainScene" type="Node2D"]

[node name="CameraManager" type="Node" parent="."]
script = ExtResource("7_camera_manager")

[node name="Player" parent="." instance=ExtResource("3_lttqn")]
position = Vector2(839, 510)

[node name="CameraFollow" parent="." instance=ExtResource("6_camera")]

[node name="EnemyShipSpawner" parent="." instance=ExtResource("4_4kvl3")]

[node name="AsteroidSpawner" parent="." instance=ExtResource("5_lttqn")]

[node name="Background" parent="." instance=ExtResource("6_lee88")]

[node name="GameTutorialUI" type="CanvasLayer" parent="."]
script = ExtResource("8_tutorial")

[node name="TutorialOverlay" type="Control" parent="GameTutorialUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="TutorialPanel" type="Panel" parent="GameTutorialUI/TutorialOverlay"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_bottom = 600.0
modulate = Color(1, 1, 1, 0.9)

[node name="TutorialContainer" type="VBoxContainer" parent="GameTutorialUI/TutorialOverlay/TutorialPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="HeaderContainer" type="HBoxContainer" parent="GameTutorialUI/TutorialOverlay/TutorialPanel/TutorialContainer"]
layout_mode = 2
alignment = 2

[node name="TutorialTitle" type="Label" parent="GameTutorialUI/TutorialOverlay/TutorialPanel/TutorialContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "–¢–£–¢–û–†–ò–ê–õ"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="GameTutorialUI/TutorialOverlay/TutorialPanel/TutorialContainer/HeaderContainer"]
layout_mode = 2
text = "√ó"

[node name="HSeparator" type="HSeparator" parent="GameTutorialUI/TutorialOverlay/TutorialPanel/TutorialContainer"]
layout_mode = 2

[node name="TutorialScrollContainer" type="ScrollContainer" parent="GameTutorialUI/TutorialOverlay/TutorialPanel/TutorialContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TutorialText" type="RichTextLabel" parent="GameTutorialUI/TutorialOverlay/TutorialPanel/TutorialContainer/TutorialScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[center][color=gold][b]–†–£–ö–û–í–û–î–°–¢–í–û –ü–û –ò–ì–†–ï[/b][/color][/center]

[color=lightblue][b]üöÄ –£–ü–†–ê–í–õ–ï–ù–ò–ï:[/b][/color]
‚Ä¢ [color=yellow]WASD[/color] - –î–≤–∏–∂–µ–Ω–∏–µ –∫–æ—Ä–∞–±–ª—è
‚Ä¢ [color=yellow]–õ–ö–ú[/color] - –°—Ç—Ä–µ–ª—å–±–∞ –ª–∞–∑–µ—Ä–∞–º–∏
‚Ä¢ [color=yellow]–ü—Ä–æ–±–µ–ª + WASD[/color] - –î—ç—à (—Ç—Ä–∞—Ç–∏—Ç —Ç–æ–ø–ª–∏–≤–æ)

[color=lightgreen][b]ü™ù –ö–†–Æ–ö-–ö–û–®–ö–ê:[/b][/color]
‚Ä¢ [color=yellow]–ü–ö–ú[/color] - –ó–∞–ø—É—Å–∫/–≤–æ–∑–≤—Ä–∞—Ç –∫—Ä—é–∫–∞
‚Ä¢ –¶–µ–ø–ª—è–π—Ç–µ—Å—å –∑–∞ –∞—Å—Ç–µ—Ä–æ–∏–¥—ã –∏ –∫–æ—Ä–∞–±–ª–∏

[color=orange][b]‚õΩ –¢–û–ü–õ–ò–í–û:[/b][/color]
‚Ä¢ –¢—Ä–∞—Ç–∏—Ç—Å—è –ø—Ä–∏ –¥–≤–∏–∂–µ–Ω–∏–∏ –∏ –¥–æ–¥–∂–µ
‚Ä¢ –í–æ—Å—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ—Ç—Å—è –≤ –ø–æ–∫–æ–µ
‚Ä¢ –ü—Ä–∏ –Ω–µ—Ö–≤–∞—Ç–∫–µ —Å–∫–æ—Ä–æ—Å—Ç—å —Å–Ω–∏–∂–∞–µ—Ç—Å—è
‚Ä¢ [color=green]–ó–µ–ª—ë–Ω—ã–µ –∞—Å—Ç–µ—Ä–æ–∏–¥—ã[/color] —Å–æ–¥–µ—Ä–∂–∞—Ç —Ç–æ–ø–ª–∏–≤–æ

[color=lightcoral][b]ü™® –¢–û–ü–õ–ò–í–ù–´–ï –ê–°–¢–ï–†–û–ò–î–´:[/b][/color]
‚Ä¢ –ó–∞—Ü–µ–ø–∏—Ç–µ—Å—å –∑–∞ [color=green]–∑–µ–ª—ë–Ω—ã–π –∞—Å—Ç–µ—Ä–æ–∏–¥[/color] –∏ \"—Å–∞–¥–∏—Ç–µ—Å—å\" –Ω–∞ –Ω–µ–≥–æ
‚Ä¢ –¢–æ–ø–ª–∏–≤–æ –ø–µ—Ä–µ–¥–∞–µ—Ç—Å—è –∞–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏
‚Ä¢ –ü—Ä–æ–≥—Ä–µ—Å—Å –±–∞—Ä –ø–æ–∫–∞–∑—ã–≤–∞–µ—Ç –æ—Å—Ç–∞—Ç–æ–∫

[color=yellow][b]‚öîÔ∏è –í–†–ê–ì–ò:[/b][/color]
‚Ä¢ –£–Ω–∏—á—Ç–æ–∂–∞–π—Ç–µ [color=orange] –∫–æ—Ä–∞–±–ª–∏[/color]
‚Ä¢ –†–∞–∑–≥—Ä–∞–±–ª—è–π—Ç–µ –æ–±–ª–æ–º–∫–∏ –¥–ª—è —Ç–æ–ø–ª–∏–≤–∞
‚Ä¢ [color=red]–û—Å—Ç–æ—Ä–æ–∂–Ω–æ:[/color] –ø–æ—Å–º–µ—Ä—Ç–Ω—ã–µ –≤—ã—Å—Ç—Ä–µ–ª—ã!

[color=lightgreen][b]üí° –°–û–í–ï–¢–´:[/b][/color]
‚Ä¢ –ò—Å–ø–æ–ª—å–∑—É–π—Ç–µ –∫—Ä—é–∫ –¥–ª—è –º–∞–Ω–µ–≤—Ä–æ–≤
‚Ä¢ –≠–∫–æ–Ω–æ–º—å—Ç–µ —Ç–æ–ø–ª–∏–≤–æ
‚Ä¢ –ò—â–∏—Ç–µ —Ç–æ–ø–ª–∏–≤–Ω—ã–µ –∞—Å—Ç–µ—Ä–æ–∏–¥—ã
‚Ä¢ –î–µ—Ä–∂–∏—Ç–µ—Å—å –ø–æ–¥–∞–ª—å—à–µ –æ—Ç –æ–±–ª–æ–º–∫–æ–≤ –∏ –±–∞–≥–æ–≤

[color=gray][i]–ù–∞–∂–º–∏—Ç–µ T —á—Ç–æ–±—ã —Å–∫—Ä—ã—Ç—å/–ø–æ–∫–∞–∑–∞—Ç—å[/i][/color]"
autowrap_mode = 3
scroll_active = false

[node name="QuickHelpButton" type="Button" parent="GameTutorialUI/TutorialOverlay"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -40.0
offset_right = 110.0
offset_bottom = -10.0
text = "–¢–£–¢–û–†–ò–ê–õ (T)"
